# meteorengine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  conanfile.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Base/: Declarations.h
Engine/Core/: Application.cpp  Application.h  File.cpp  File.h  Game.cpp  Game.h  IApplicationLayer.h  IFile.h  IGameLayer.h  IWindow.cpp  IWindow.h  Window.cpp  Window.h
Engine/Events/: AbstractEvent.h  Event.h  IEvent.h  KeyEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  WindowClosedEvent.h  WindowEvent.h
Engine/Game/: AbstractScene.h  IGameObject.h
Engine/Graphics/: AbstractRenderable.h  AbstractRenderable3d.cpp  AbstractRenderable3d.h  AbstractRenderer.h  Context.cpp  Context.h  GraphicsFactory.cpp  GraphicsFactory.h  ICamera.h  IContext.h  IMesh.h  IShader.h  Material.cpp  Material.h  OpenGlContext.cpp  OpenGlContext.h  OpenGlRenderer.cpp  OpenGlRenderer.h  OpenGlShader.cpp  OpenGlShader.h  OpenGlShaderCompiler.cpp  OpenGlShaderCompiler.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Texture.h
Engine/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
Engine/Utils/: FileSystemUtils.cpp  FileSystemUtils.h  TimeUtils.cpp  TimeUtils.h
Runtime/: CMakeLists.txt  main.cpp
Runtime/Actors/: Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
Runtime/Scenes/: CubeScene.cpp  CubeScene.h  TestScene.cpp  TestScene.h  TriangleScene.cpp  TriangleScene.h
Runtime/Shaders/: RectangleFS.glsl  RectangleVS.glsl  TriangleFS.glsl
engine/Base/: Declarations.h
engine/Core/: Application.cpp  Application.h  IWindow.cpp  IWindow.h
